# spacedrep

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tmp1b2qhsd_  tmp24u04lco  tmp2awhmh6u  tmp2bb6ksr7  tmp311p7zpq  tmp32qnw5t1  tmp39w6buo1  tmp55zdyc_w  tmp6l9ziyeg  tmp7j6evym8  tmp92nz3ypp  tmp9c8b9b9p  tmpa3dt6_o3  tmpbyuryhe4  tmpc3qfzea0  tmpc636eucy  tmpczcee6my  tmpduuty3dr  tmpejfwmw30  tmpg4hms5c8  tmpobg1sjcg  tmpohnbug0a  tmpp3mycypf  tmpp52riyhi  tmpqkay5otd  tmprq_yrn_d  tmps6v6rpa3  tmps7kf5r4x  tmps91dqlim  tmpsjrzy2nh  tmpt2yxnh8q  tmpu6m5j5mw  tmpuxk_rkao  tmpz1lq8cbj  tmpzfky6jn2  (+1 more)
.github/workflows/: publish.yml
designs/002-mcp-server/: plan.md  research.md  tasks.md
pytest-of-patrick/: pytest-current
pytest-of-patrick/pytest-3/: apkgcurrent  reimportcurrent  test_basiccurrent  test_card_not_foundcurrent  test_deletecurrent  test_dry_runcurrent  test_empty_arraycurrent  test_empty_sessioncurrent  test_emptycurrent  test_export_path_traversal_blocurrent  test_export_sensitive_dir_bloccurrent  test_exportcurrent  test_filter_by_deckcurrent  test_filter_by_nonexistent_deccurrent  test_filter_by_tagscurrent  test_foundcurrent  test_good_ratingcurrent  test_idempotentcurrent  test_import_dry_runcurrent  test_import_missing_filecurrent  test_import_path_traversal_blocurrent  test_import_roundtripcurrent  test_import_sensitive_dir_bloccurrent  test_import_wrong_extensioncurrent  test_initcurrent  test_invalid_jsoncurrent  test_invalid_ratingcurrent  test_no_cards_duecurrent  test_no_fields_raisescurrent  test_no_reviewscurrent  test_not_foundcurrent  test_optimizer_not_installed_rcurrent  test_paginationcurrent  test_previewcurrent  test_returns_cardcurrent  test_sentinel_empty_stringcurrent  test_spacedrep_error_becomes_tcurrent  test_statuscurrent  test_suspendcurrent  test_tool_error_contains_suggecurrent  (+11 more)
pytest-of-patrick/pytest-4/: apkgcurrent  reimportcurrent  test_basiccurrent  test_card_not_foundcurrent  test_deletecurrent  test_dry_runcurrent  test_empty_arraycurrent  test_empty_sessioncurrent  test_emptycurrent  test_export_path_traversal_blocurrent  test_export_sensitive_dir_bloccurrent  test_exportcurrent  test_filter_by_deckcurrent  test_filter_by_nonexistent_deccurrent  test_filter_by_tagscurrent  test_foundcurrent  test_good_ratingcurrent  test_idempotentcurrent  test_import_dry_runcurrent  test_import_missing_filecurrent  test_import_path_traversal_blocurrent  test_import_roundtripcurrent  test_import_sensitive_dir_bloccurrent  test_import_wrong_extensioncurrent  test_initcurrent  test_invalid_jsoncurrent  test_invalid_ratingcurrent  test_no_cards_duecurrent  test_no_fields_raisescurrent  test_previewcurrent  (+21 more)
tests/: conftest.py  test_anki_schema.py  test_apkg_reader.py  test_apkg_writer.py  test_cli.py  test_core.py  test_db.py  test_fsrs_engine.py  test_mcp_server.py
(+173 files in other folders)
