[project]
name = "spacedrep"
version = "0.3.0"
requires-python = ">=3.12"
description = "Agent-first flashcard CLI with FSRS scheduling and .apkg support"
license = "MIT"
readme = "README.md"
authors = [{ name = "wpwilson10", email = "wpwilson10@gmail.com" }]
keywords = ["flashcards", "spaced-repetition", "fsrs", "anki", "mcp", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
]
dependencies = [
    "typer>=0.15",
    "fsrs>=6.3,<7",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
]

[project.scripts]
spacedrep = "spacedrep.cli:app"
spacedrep-mcp = "spacedrep.mcp_server:main"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
optimizer = ["fsrs[optimizer]"]
dev = ["pytest>=8.0", "pyright>=1.1", "ruff>=0.11", "pre-commit>=4.0", "mcp>=1.0"]

[project.urls]
Homepage = "https://github.com/wpwilson10/spacedrep"
Repository = "https://github.com/wpwilson10/spacedrep"
Issues = "https://github.com/wpwilson10/spacedrep/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false

[[tool.pyright.executionEnvironments]]
root = "tests/test_mcp_server.py"
reportUnknownVariableType = false
reportUnknownMemberType = false
reportAttributeAccessIssue = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/spacedrep/commands/*.py" = ["B008"]
"src/spacedrep/cli.py" = ["E402"]
